// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapses big diffs to patch format 1`] = `
- Expected
+ Received

@@ -6,9 +6,9 @@
      4,
      5,
      6,
      7,
      8,
-     9,
      10,
+     9,
    ],
  }
`;

exports[`color of text (expanded) 1`] = `
- Expected
+ Received

  Object {
    "searching": "",
-   "sorting": Object {
+   "sorting": Array [
+     Object {
        "descending": false,
        "fieldKey": "what",
      },
+   ],
  }
`;

exports[`context number of lines: -1 (5 default) 1`] = `
- Expected  - 1
+ Received  + 1

@@ -6,9 +6,9 @@
      4,
      5,
      6,
      7,
      8,
-     9,
      10,
+     9,
    ],
  }
`;

exports[`context number of lines: 0  1`] = `
- Expected  - 1
+ Received  + 1

@@ -11,1 +11,0 @@
-     9,
@@ -13,0 +12,1 @@
+     9,
`;

exports[`context number of lines: 1  1`] = `
- Expected  - 1
+ Received  + 1

@@ -10,4 +10,4 @@
      8,
-     9,
      10,
+     9,
    ],
`;

exports[`context number of lines: 2  1`] = `
- Expected  - 1
+ Received  + 1

@@ -9,6 +9,6 @@
      7,
      8,
-     9,
      10,
+     9,
    ],
  }
`;

exports[`context number of lines: 3.1 (5 default) 1`] = `
- Expected  - 1
+ Received  + 1

@@ -6,9 +6,9 @@
      4,
      5,
      6,
      7,
      8,
-     9,
      10,
+     9,
    ],
  }
`;

exports[`context number of lines: undefined (5 default) 1`] = `
- Expected  - 1
+ Received  + 1

@@ -6,9 +6,9 @@
      4,
      5,
      6,
      7,
      8,
-     9,
      10,
+     9,
    ],
  }
`;

exports[`diffStringsUnified edge cases empty both a and b 1`] = `
- Expected  - 0
+ Received  + 0


`;

exports[`diffStringsUnified edge cases empty only a 1`] = `
- Expected  - 0
+ Received  + 1

+ one-line string
`;

exports[`diffStringsUnified edge cases empty only b 1`] = `
- Expected  - 1
+ Received  + 0

- one-line string
`;

exports[`diffStringsUnified edge cases equal both non-empty 1`] = `
- Expected  - 0
+ Received  + 0

  one-line string
`;

exports[`diffStringsUnified edge cases multiline has no common after clean up chaff 1`] = `
- Expected  - 2
+ Received  + 2

- delete
- two
+ insert
+ 2
`;

exports[`diffStringsUnified edge cases one-line has no common after clean up chaff 1`] = `
- Expected  - 1
+ Received  + 1

- delete
+ insert
`;

exports[`falls back to not call toJSON if it throws and then objects have differences 1`] = `
- Expected  - 1
+ Received  + 1

  Object {
-   "line": 1,
+   "line": 2,
    "toJSON": [Function toJSON],
  }
`;

exports[`falls back to not call toJSON if serialization has no differences but then objects have differences 1`] = `
Compared values serialize to the same structure.
Printing internal object structure without calling \`toJSON\` instead.

- Expected  - 1
+ Received  + 1

  Object {
-   "line": 1,
+   "line": 2,
    "toJSON": [Function toJSON],
  }
`;

exports[`oneline strings 1`] = `
- Expected  - 1
+ Received  + 1

- ab
+ aa
`;

exports[`oneline strings 2`] = `
- Expected  - 1
+ Received  + 1

- 123456789
+ 234567890
`;

exports[`oneline strings 3`] = `
- Expected  - 1
+ Received  + 2

- oneline
+ multi
+ line
`;

exports[`oneline strings 4`] = `
- Expected  - 2
+ Received  + 1

- multi
- line
+ oneline
`;

exports[`options 7980 diff 1`] = `
- Original
+ Modified

- \`\${Ti.App.name} \${Ti.App.version} \${Ti.Platform.name} \${Ti.Platform.version}\`
+ \`\${Ti.App.getName()} \${Ti.App.getVersion()} \${Ti.Platform.getName()} \${Ti.Platform.getVersion()}\`
`;

exports[`options 7980 diffStringsUnified 1`] = `
- Original
+ Modified

- \`\${Ti.App.name} \${Ti.App.version} \${Ti.Platform.name} \${Ti.Platform.version}\`
+ \`\${Ti.App.getName()} \${Ti.App.getVersion()} \${Ti.Platform.getName()} \${Ti.Platform.getVersion()}\`
`;

exports[`options change color diffStringsUnified 1`] = `
- Expected
+ Received

- delete
- changed from
+ changed to
+ insert
  common
`;

exports[`options change color no diff 1`] = `Compared values have no visual difference.`;

exports[`options change indicators diff 1`] = `
< Expected
> Received

  Array [
<   "delete",
<   "change from",
>   "change to",
>   "insert",
    "common",
  ]
`;

exports[`options common diff 1`] = `
- Expected
+ Received

= Array [
-   "delete",
-   "change from",
+   "change to",
+   "insert",
=   "common",
= ]
`;

exports[`options includeChangeCounts false diffLinesUnified 1`] = `
- Expected
+ Received

  Array [
-   "delete",
-   "change from",
+   "change to",
+   "insert",
    "common",
  ]
`;

exports[`options includeChangeCounts false diffStringsUnified 1`] = `
- Expected
+ Received

- change from
+ change to
  common
`;

exports[`options includeChangeCounts true padding diffLinesUnified a has 2 digits 1`] = `
- Before  - 10
+ After   +  1

  common
- a
- a
- a
- a
- a
- a
- a
- a
- a
- a
+ b
`;

exports[`options includeChangeCounts true padding diffLinesUnified b has 2 digits 1`] = `
- Before  -  1
+ After   + 10

  common
- a
+ b
+ b
+ b
+ b
+ b
+ b
+ b
+ b
+ b
+ b
`;

exports[`options includeChangeCounts true padding diffStringsUnified 1`] = `
- Before  - 1
+ After   + 1

- change from
+ change to
  common
`;

exports[`options omitAnnotationLines true diff 1`] = `
  Array [
-   "delete",
-   "change from",
+   "change to",
+   "insert",
    "common",
  ]
`;

exports[`options omitAnnotationLines true diffStringsUnified and includeChangeCounts true 1`] = `
- change from
+ change to
  common
`;

exports[`options omitAnnotationLines true diffStringsUnified empty strings 1`] = ``;

exports[`options trailingSpaceFormatter diff default no color 1`] = `
- Expected
+ Received

- delete 1 trailing space: 
+ delete 1 trailing space:
  common 2 trailing spaces:  
- insert 1 trailing space:
+ insert 1 trailing space: 
`;

exports[`options trailingSpaceFormatter diff middle dot 1`] = `
- Expected
+ Received

- delete 1 trailing space:·
+ delete 1 trailing space:
  common 2 trailing spaces:··
- insert 1 trailing space:
+ insert 1 trailing space:·
`;

exports[`options trailingSpaceFormatter diff yellowish common 1`] = `
- Expected
+ Received

- delete 1 trailing space: 
+ delete 1 trailing space:
  common 2 trailing spaces:  
- insert 1 trailing space:
+ insert 1 trailing space: 
`;
